--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         </ul>
         <h2>What are we doing</h2>
         <ul>
-            <li><img src="/images/img1.jpg" alt="Computer" width="360" height="300"></li>
-            <li><img src="/images/img2.jpg" alt="Application" width="360" height="300"></li>
-            <li><img src="/images/img3.jpg" alt="Smartphone" width="360" height="300"></li>
+            <li><img src="../images/img1.jpg" alt="Computer" width="360" height="300"></li>
+            <li><img src="../images/img2.jpg" alt="Application" width="360" height="300"></li>
+            <li><img src="../images/img3.jpg" alt="Smartphone" width="360" height="300"></li>
         </ul>
         <h2>Our Team</h2>
         <ul>
