--- a/index.html
+++ b/index.html
@@ -55,29 +55,29 @@
         </ul>
         <h2>What are we doing</h2>
         <ul>
-            <li><img src="../images/img1.jpg" alt="Computer" width="360" height="300"></li>
-            <li><img src="../images/img2.jpg" alt="Application" width="360" height="300"></li>
-            <li><img src="../images/img3.jpg" alt="Smartphone" width="360" height="300"></li>
+            <li><img src="./images/img1.jpg" alt="Computer" width="360" height="300"></li>
+            <li><img src="./images/img2.jpg" alt="Application" width="360" height="300"></li>
+            <li><img src="./images/img3.jpg" alt="Smartphone" width="360" height="300"></li>
         </ul>
         <h2>Our Team</h2>
         <ul>
             <li>    
-                <img src="/images/teamCard1.jpg" alt="Team member" width="264">
+                <img src="./images/teamCard1.jpg" alt="Team member" width="264">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="/images/teamCard2.jpg" alt="Team member" width="264">
+                <img src="./images/teamCard2.jpg" alt="Team member" width="264">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="/images/teamCard3.jpg" alt="Team member" width="264">
+                <img src="./images/teamCard3.jpg" alt="Team member" width="264">
                 <h3>Camila Garcia</h3>
                 <p>Camila Garcia</p>
             </li>
             <li>
-                <img src="/images/teamCard4.jpg" alt="Team member" width="264">
+                <img src="./images/teamCard4.jpg" alt="Team member" width="264">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
