--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
 </head>
 <body>
     <header>
-        <div>
-            <a href="./index.html">Web Studio</a> 
-        </div>
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
-                    <a href="/studio">Studio</a>
+                    <a href="">Studio</a>
                 </li>
                 <li>
-                    <a href="/portfolio">Portfolio</a>
+                    <a href="">Portfolio</a>
                 </li>
                 <li>
-                    <a href="/contacts">Contacts</a>
+                    <a href="">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <div>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </div>
+        <address>
+            <ul>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            </ul>
+            
+        </address>
         
     </header>
     <main>
@@ -84,10 +85,8 @@
         </ul>
     </main>
     <footer>
-        <div>
             <a href="./index.html">Web Studio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
     </footer>
    
 </body>
