--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
     </header>
     <main>
-        <h1>Effective Solutions <br>
+        <h1>Effective Solutions
         for Your Business</h1>
         <button type="button">Order Service</button>
         <ul>
@@ -85,7 +85,7 @@
         </ul>
     </main>
     <footer>
-            <a href="./index.html">Web Studio</a>
+            <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
    
