--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <button type="button">Order Service</button>
         </section>
         <section>
+            <h2 hidden>features</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -82,7 +83,7 @@
                 <li>
                     <img src="./images/teamCard3.jpg" alt="Team member" width="264">
                     <h3>Camila Garcia</h3>
-                    <p>Camila Garcia</p>
+                    <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/teamCard4.jpg" alt="Team member" width="264">
